[package]
name = "casper-cep18"
version = "0.1.0"
edition = "2018"
description = "A library for developing CEP18 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-cep18"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/cep18"
license-file = "../LICENSE"

[[bin]]
name = "cep18"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
base64 = { version = "0.20.0", default-features = false, features = ["alloc"] }
casper-contract = "1.4.4"
casper-types = "1.6.0"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.16.0", default-features = false }
