[package]
name = "contract"
version = "0.1.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-dsl = { git = "https://github.com/casper-ecosystem/casper-dsl", branch = "dev" }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = true
