[package]
name = "contract_macro"
version = "0.1.0"
authors = ["Dmitry <dmitry@casperlabs.io>"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.30"

[dependencies]
quote = "1.0.7"
syn = "1.0.31"
proc-macro2 = "1.0.18"
types = { package = "casper-types", version="0.7.6" }
contract = { package = "casper-contract", version="0.7.6" }

[features]
default = ["syn/full", "syn/extra-traits","contract/std", "types/std"]
