[package]
name = "erc20-tests"
version = "0.2.1"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
casper-engine-test-support = "1.3.2"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }
hex = "0.4.3"
blake2 = "0.9.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

