[package]
name = "casper-erc20"
version = "0.2.1"
edition = "2018"
authors = ["Michał Papierski <michal@casperlabs.io>"]
description = "A library for developing ERC20 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-erc20"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/erc20"
license-file = "../LICENSE"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8.0", default-features = false }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]
