[package]
name = "tests"
version = "0.2.1"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = "1.2.0"
casper-types = "1.2.0"
casper-engine-test-support = "1.2.0"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

