[package]
name = "erc20-token"
authors = ["Michał Papierski <michal@casperlabs.io>"]
version = "0.2.1"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { path = "../../erc20" }
casper-types = "1.5.0"

[[bin]]
name = "erc20_token"
path = "src/main.rs"
bench = false
doctest = false
test = false
