[package]
name = "erc20-test-call"
version = "0.1.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "erc20_test_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { path = "../../erc20" }
casper-types = "1.5.0"
hex = {version="0.4.3", default-features = false }
blake2 = {version="0.9.2", default-features = false }
base64 = {version="0.13.0", default-features = false }