[package]
name = "erc20-test-call"
version = "0.1.1"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "erc20_test_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { path = "../../erc20" }
casper-types = "1.5"
hex = "0.4.3"
blake2 = "0.10.6"
base64 = "0.20.0"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-erc20/std"]
