[package]
name = "erc20-test-call"
version = "0.2.1"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "erc20_test_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "1.4.4"
casper-erc20 = { path = "../../erc20" }
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
base64 = { version = "0.20.0", default-features = false }
