[package]
name = "tests"
version = "0.1.0"
edition = "2018"
authors = ["Michał Papierski <michal@casperlabs.io>"]

[dependencies]
casper-types = "1.5.0"
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.1.0", features = ["test-support"] }
casper-execution-engine = "1.5.0"
once_cell = "1.8.0"

[lib]
name = "tests"
bench = false
doctest = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
