[package]
name = "erc20-test"
version = "0.1.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "erc20_test"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
casper-erc20 = { path = "../../erc20" }

[features]
default = ["casper-contract/std", "casper-types/std", "casper-erc20/std"]
