[package]
name = "contract-interface"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "1.0.74", default-features = false }

[lib]
proc-macro = true
