[package]
name = "contract-utils"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = "0.4.3"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
