[package]
name = "contract-utils"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
